# smarthistory

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TECHNICAL.md  check_constraint  check_list_state
docs/: actions.md  configuration.md  multiplexer.md
docs/modes/: README.md  ag.md  codegraph.md  directories.md  elements.md  files.md  history.md  jira.md  llm.md  notes.md  output.md  panes.md  question.md  tags.md  todo.md
src/: ag.rs  codegraph.rs  files.rs  highlight.rs  init.zsh  jira.rs  llm.rs  main.rs  multiplexer.rs  ssh_config.rs  tui.rs  tui.rs.bak2  util.rs
src/tui/: actions.rs  bindings.rs  labeled.rs  render.rs  state.rs  stats.rs  tests.rs
src/tui/mode/: ag.rs  codegraph.rs  directories.rs  elements.rs  files.rs  jira.rs  llm.rs  mod.rs  notes.rs  output.rs  panes.rs  question.rs  tags.rs  todo.rs
src/tui/theme/: curated.rs  mod.rs  palette_storage.rs  picker.rs  styles.rs
src/tui/theme/curated/: andromeeda.toml  aurora-x.toml  ayu-dark.toml  ayu-light.toml  ayu-mirage.toml  catppuccin-frappe.toml  catppuccin-macchiato.toml  dark-plus.toml  doom-one.toml  doom-solarized-light.toml  dracula-soft.toml  everforest-light.toml  github-dark-default.toml  github-dark-dimmed.toml  github-dark-high-contrast.toml  github-dark.toml  github-light-default.toml  github-light-high-contrast.toml  github-light.toml  gruvbox-dark-hard.toml  gruvbox-dark-soft.toml  gruvbox-light-hard.toml  gruvbox-light-soft.toml  horizon-bright.toml  horizon.toml  houston.toml  kanagawa-dragon.toml  kanagawa-lotus.toml  laserwave.toml  leuven.toml  light-plus.toml  material-dark.toml  material-light.toml  material-theme-darker.toml  material-theme-lighter.toml  material-theme-ocean.toml  material-theme-palenight.toml  material-theme.toml  min-dark.toml  min-light.toml  (+18 more)
