[package]
name = "smarthistory"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
ratatui = "0.30.0"
ratatui-themes = "0.2"
regex = "1.10"
rusqlite = "0.38.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pin `time` to <0.3.52 because `time 0.3.52` changed the
# `Parsing::parse` signature from 1-arg to 2-arg, but
# `cookie 0.18.1` (transitive via `reqwest` → `note_search` →
# `cookie_store`) still calls the old 1-arg form, producing
# `error[E0061]: this method takes 2 arguments but 1
# argument was supplied` at the build of `cookie`.
time = "=0.3.51"
note_search = { git = "https://github.com/snharbec/note_search.git", rev = "18c3bd3" }
# `reqwest` is ALSO a transitive dep of `note_search`
# (it uses `reqwest` for its JIRA import feature). Adding
# it directly here reuses the SAME already-compiled
# crate (cargo unifies features), so it costs no extra
# binary weight, while letting the TUI do live JIRA
# search via the `-` prefix. We need `blocking` + `json`
# + `gzip`: the JIRA REST v2 search endpoint gzips any
# response larger than a single issue (project-wide
# queries, multi-page results), and `gzip` is NOT in
# `reqwest`'s `default` feature set, so we have to enable
# it explicitly. Without it, the blocking client fails
# with "error decoding response body" on any gzipped
# reply — a single-issue `key = X-1` worked only because
# that one tiny response wasn't gzipped. The union with
# `note_search`'s feature set is still the same compiled
# crate; we just turn on one extra feature.
reqwest = { version = "0.12", features = [
  "blocking",
  "json",
  "gzip",
  "native-tls",
] }
ureq = { version = "2", features = ["json"] }

# `terminal-colorsaurus` is used by the TUI's
# `detect_color_scheme()` to query the terminal
# directly via the OSC 10 / OSC 11 escape sequences
# (cross-platform, supported by xterm, iTerm2,
# kitty, alacritty, gnome-terminal, wezterm, and
# every other modern terminal). The env-var-only
# detection we had before (`$COLORFGBG` /
# `$TERM_PROGRAM` / `$WT_SESSION`) is good enough
# for ~80% of users but fails on setups like a
# bare `xterm-256color` shell where none of those
# vars are set. The OSC query is the standard
# cross-platform answer. The crate's only
# dependency is `anstyle` (a trivial enum-only
# type) when the `anstyle` feature is on, or
# `rgb` (a small RGB type) when `rgb` is on —
# both are zero-cost for the binary. We enable
# both so the consumer can pick whichever
# matches the rest of their color stack.
terminal-colorsaurus = { version = "1.0", features = ["anstyle", "rgb"] }

# Feature flag for the
# alternative `herdr`
# multiplexer backend.
#
# herdr (https://herdr.dev)
# is a terminal workspace
# manager that plays a
# role similar to tmux
# for AI-agent workflows.
# When this feature is
# enabled, the TUI's
# directory-switching
# logic (`#` mode) and
# panes-switching logic
# (`*` mode) can target
# herdr workspaces in
# addition to tmux
# sessions. The user
# selects the active
# backend at runtime
# via `multiplexer=tmux|herdr`
# in
# `~/.config/smarthistory/config`
# (or the
# `SMARTHISTORY_MULTIPLEXER`
# environment variable).
#
# **Enabled by default**
# so a fresh
# `cargo build --release`
# (or `cargo install`)
# produces a binary that
# can target either
# backend without
# extra flags. The
# feature exists for
# users who want to
# build a smaller
# tmux-only binary
# (`cargo build
# --no-default-features`
# keeps the binary
# working but disables
# the herdr backend
# entirely; selecting
# `multiplexer=herdr`
# on such a build
# surfaces a clear
# "build with default
# features" status
# message at the
# staging site).
[features]
default = ["herdr"]
herdr = []

[dev-dependencies]
filetime = "0.2"
